set(TARGET_NAME InOneWeekend)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

file(GLOB HEADER_FILES CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/Include/*.h)
file(GLOB SOURCE_FILES CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/Source/*.cpp)

include_directories(${CMAKE_CURRENT_SOURCE_DIR}/Include)

add_executable(${TARGET_NAME} ${HEADER_FILES} ${SOURCE_FILES})

target_link_libraries(${TARGET_NAME} PRIVATE stb)

set(IAMGE_OUTPUT_DIR "${CMAKE_CURRENT_SOURCE_DIR}")

configure_file(config.h.in "${CMAKE_CURRENT_SOURCE_DIR}/include/config.h")